[gd_scene load_steps=4 format=3 uid="uid://chnr5ugvu1gj4"]

[ext_resource type="Script" path="res://scripts/blocks/timer_block.gd" id="1_rifhl"]
[ext_resource type="Texture2D" uid="uid://uudtgfvwxig3" path="res://textures/blocks/timer_block.png" id="2_jlbgq"]
[ext_resource type="Texture2D" uid="uid://d2knl2pc7ytxv" path="res://textures/blocks/misc/logic_pin_bool.png" id="3_8d00k"]

[node name="TimerBlock" type="StaticBody2D"]
use_parent_material = true
script = ExtResource("1_rifhl")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 2
use_parent_material = true
texture = ExtResource("2_jlbgq")
region_rect = Rect2(0, 16, 8, 8)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2, -2)
scale = Vector2(0.2, 0.2)
rect = Rect2(-10, -10, 40, 40)

[node name="shade" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.521569)

[node name="Inputs" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="I1" type="TextureButton" parent="Inputs"]
offset_left = -6.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = 2.0
texture_normal = ExtResource("3_8d00k")

[node name="Outputs" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="O1" type="TextureButton" parent="Outputs"]
offset_left = 1.0
offset_top = -2.0
offset_right = 5.0
offset_bottom = 2.0
texture_normal = ExtResource("3_8d00k")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tick" type="Timer" parent="."]
wait_time = 0.5

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Tick" to="." method="_on_tick_timeout"]
